Changes for 3.0.11rc1

New features:

Bug fixes:
..F....... [ZBX-12022] fixed trigger resolving in services configuration; fixed popup window size (miks)
..F....... [ZBX-12429] fixed template replacement in mass update form (gcalenko)
..F....... [ZBX-12396] fixed an error in screens if screen trigger overview element contains deleted host group (miks)
..F....... [ZBX-12439] fixed macro name field length in host configuration form (gcalenko)
...G...PS. [ZBX-10820] fixed potential loss of data when server/proxy processes zabbix_sender data (Andris)
........S. [ZBX-12446] fixed discovery and auto registration to accept empty DNS names (vso)
.......PS. [ZBX-12224] fixed connection to Oracle database when database server gives out warnings (gleb)
...G...PS. [ZBX-12195] fixed contamination of script output with Zabbix'es own log messages when logging level is set to 4 or 5 and LogType=console (gleb)
...G...... [ZBX-12270] fixed processing of AIX item 'system.stat[ent]' in agent; thanks to Marc for patch (Andris)
..F....... [ZBX-12277] fixed trigger expression test form incorrectly replacing macros (Ivo)

--------------------------------------------------------------------------------
Changes for 3.0.10

New features:
A.F....... [ZBX-1357] updated Chinese (China), English (United States), Japanese, Korean, Polish, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.0.10rc1

New features:
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), Korean, Romanian, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)
.......PS. [ZBXNEXT-3659] reduced cache locking time during configuration synchronization (wiper)

Bug fixes:
........S. [ZBX-12349] fixed security vulnerability with execution of the remote commands on server; thanks to MATSUDA Daiki, Ron Waisberg for report (vso)